* Addressbook: Disallow '.-' and '-.' in host names     * NTCP: Don't drop a connection unless both directions are idle;             Fix idle time for outbound connections     * Outbound message: Make sure cached lease is in current leaseSet     * Stats: Put all NetworkDatabase stats in same group     * TunnelPool: Stop building tunnels and leaseSets after client shutdown     * i2psnark: Add locking to prevent two I2CP connections
Monotone-Parent: a1be14e556b208f38dcd501c5c43bc46c70724e4
Monotone-Revision: 9dd4e0542e1813bb8a8bfd07c5fb17c4a7e88199

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-04-12T21:34:25
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2008-04-12 zzz
+    * Addressbook: Disallow '.-' and '-.' in host names
+    * NTCP: Don't drop a connection unless both directions are idle;
+            Fix idle time for outbound connections
+    * Outbound message: Make sure cached lease is in current leaseSet
+    * Stats: Put all NetworkDatabase stats in same group
+    * TunnelPool: Stop building tunnels and leaseSets after client shutdown
+    * i2psnark: Add locking to prevent two I2CP connections
+
 2008-04-07 zzz
     * i2psnark:
       - Implement upstream bandwidth limiting
