--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2008-04-17 zzz
+    * Reachability:
+      - Track unreachable peers persistently
+        (i.e. separately from shitlist, and not cleared when they contact us)
+      - Exclude detected unreachable peers from inbound tunnels
+      - Exclude detected unreachable peers from selected leases
+      - Exclude detected unreachable floodfill peers from lookups
+      - Show unreachable status on profiles.jsp
+
 2008-04-16 zzz
     * SSU/Reachability:
       - Extend shitlist time from 4-8m to 40-60m
