* Outbound message/Reachability:       - Fix a bug from -19 causing the persistent lease selection         removed in -17 to be back again       - Use netDb-listed-unreachable instead of detected-unreachable         for exclusion of unreachable peers from selected leases,         as there are potential anonymity problems with using         detected-unreachable       - Tweak logging some more     * NetDb stats: Remove a couple more including the inefficient stat_identities
Monotone-Parent: 37431edf23ee354b5727849b9aeabcb031c347f0
Monotone-Revision: 20e06eb5e2ee39991682cae68511fca1944cd5b0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-04-20T18:02:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2008-04-20 zzz
+    * Outbound message/Reachability:
+      - Fix a bug from -19 causing the persistent lease selection
+        removed in -17 to be back again
+      - Use netDb-listed-unreachable instead of detected-unreachable
+        for exclusion of unreachable peers from selected leases,
+        as there are potential anonymity problems with using
+        detected-unreachable
+      - Tweak logging some more
+    * NetDb stats: Remove a couple more including the inefficient stat_identities
+
 2008-04-17 zzz
     * Reachability:
       - Track unreachable peers persistently
