--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,5 @@
+* 2008-04-26  0.6.1.33 released
+
 2008-04-20 zzz
     * Outbound message/Reachability:
       - Fix a bug from -19 causing the persistent lease selection
