I2PTunnel: Change default outproxy to false.i2p
Monotone-Parent: b2e6ad734cadee5022060e5f718c588ea6f3f379
Monotone-Revision: 3f56d9895ec00b33e4fb83c19c43739dc461f001

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-05-05T14:42:17
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -17,6 +17,7 @@
       - Add reachability status
       - Add participating tunnel acceptance status
     * Throttle: Reject tunnels for first 10m uptime
+    * I2PTunnel: Change default outproxy to false.i2p
 
 * 2008-04-26  0.6.1.33 released
 
