--- a/history.txt
+++ b/history.txt
@@ -18,6 +18,7 @@
       - Add participating tunnel acceptance status
     * Throttle: Reject tunnels for first 10m uptime
     * I2PTunnel: Change default outproxy to false.i2p
+    * profiles.jsp: Add router version
 
 * 2008-04-26  0.6.1.33 released
 
