--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,19 @@
+2008-05-07 zzz
+    * Reachability:
+      - Restrict peers requiring introducers from inbound tunnels,
+        since it's slow and unreliable... and many of them advertise
+        NTCP, which seems unlikely to work
+      - Provide warning on summary bar if firewalled with inbound NTCP enabled
+    * Stats: Remove the bw.[send,recv]Bps[1,15]s stats unless
+      log level net.i2p.router.transport.FIFOBandwidthLimiter >= WARN
+      at startup (you didn't get any data unless you set the log level anyway)
+    * oldstats.jsp: Don't put 2 decimal places on integer event counts
+    * Remove the Internals link from the menu bar
+    * i2psnark: Extend startup delay from 1 to 3 minutes
+
+2008-05-06 welterde
+    * HTTP Proxy: Add i2jump.i2p jump service
+
 2008-05-05 zzz
     * NetDb Stats: Cleanup of commented out stats
     * Outbound message:
