* Reachability:       - Call the previously unused profile.tunnelTestFailed()         (redefined to include a probability argument)         and severely downgrade a peer's capacity upon failures,         depending on tunnel length and direction.         This will help push unreachable and malicious peers         out of the High Capacity tier.       - Put recent fail rate on profiles.jsp     * ProfileOrganizer: Logging cleanup     * eepsite_index.html: Update add-host and jump links     * HTTP Proxy: Remove trevorreznik jump server from list
Monotone-Parent: 2dc57aa60c88db1333bb1a4ea1e2bebc49816dd3
Monotone-Revision: 09ea2e85b73f5910fff0cd795f36b6f49d9e99d7

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-05-20T12:48:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,16 @@
+2008-05-20 zzz
+    * Reachability:
+      - Call the previously unused profile.tunnelTestFailed()
+        (redefined to include a probability argument)
+        and severely downgrade a peer's capacity upon failures,
+        depending on tunnel length and direction.
+        This will help push unreachable and malicious peers
+        out of the High Capacity tier.
+      - Put recent fail rate on profiles.jsp
+    * ProfileOrganizer: Logging cleanup
+    * eepsite_index.html: Update add-host and jump links
+    * HTTP Proxy: Remove trevorreznik jump server from list
+
 2008-05-20 welterde
     * implemented PrivateKeyFile
 
