Dont bid on private IP addresses in transports
Monotone-Parent: e588070b381800685359361ac1affea9532c6778
Monotone-Revision: 8ceac83006cfd0508517b37746febb7745a9f32b

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-05-27T13:20:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,8 +1,14 @@
+2008-05-29 zzz
+    * Transport:
+      - NTCP and UDP: Don't bid to connect to private IP addresses, mark unreachable
+      - UDP: Don't bid when IP address missing, mark unreachable
+
 2008-05-26 zzz
     * Throttle: Set a default router.maxParticipatingTunnels = 3000 (was none)
     * Stats: Add a fake uptime if not publishing stats, to get participating tunnels
     * build.xml:
-      - Add an updateSmall target which includes only the essentials
+      - Add an updaterSmall target which includes only the essentials
+      - Add an updaterRouter target which includes only i2p.jar and router.jar
       - Clean up the build file some 
       - Remove empty eepsite/ and subdirs from i2pupdate.zip
     * configtunnels.jsp: Add warning
