* LeaseSet:       - Sort the leases by expiration date in TunnelPool.locked_buildNewLeaseSet()         to make later LeaseSet comparisons reliable. This cleans up the code too.       - Fix broken old vs. new LeaseSet comparison         in ClientConnectionRunner.requestLeaseSet(),         so that we only sign and publish a new LeaseSet when it's really new.         Should reduce outbound overhead both in LeaseSet publishing and LeaseSet bundling,         and floodfill router load, since locked_buildNewLeaseSet() generates         the same LeaseSet as before quite frequently, often just seconds apart.
Monotone-Parent: ba4af54ae8971769874f93b531e2ae0871130b49
Monotone-Revision: 28803ab608ff13526def9a0f33682bf627252c02

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-06T16:17:07

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2008-06-06 zzz
+    * LeaseSet:
+      - Sort the leases by expiration date in TunnelPool.locked_buildNewLeaseSet()
+        to make later LeaseSet comparisons reliable. This cleans up the code too.
+      - Fix broken old vs. new LeaseSet comparison
+        in ClientConnectionRunner.requestLeaseSet(),
+        so that we only sign and publish a new LeaseSet when it's really new.
+        Should reduce outbound overhead both in LeaseSet publishing and LeaseSet bundling,
+        and floodfill router load, since locked_buildNewLeaseSet() generates
+        the same LeaseSet as before quite frequently, often just seconds apart.
+
 2008-06-05 zzz
     * LeaseSet - code cleanup:
       - Add exception to enforce max # of leases = 6, should be plenty
