* NetDb: Tweak some logging on lease problems     * Shitlist:       - Add shitlistForever() and isShitlistedForever(), unused for now       - Sort the HTML output by router hash     * config.jsp: Add another warning     * netdb.jsp:       - Sort the lease HTML output by dest hash, local first       - Sort the router HTML output by router hash
Monotone-Parent: 28803ab608ff13526def9a0f33682bf627252c02
Monotone-Revision: d35eb70e00a9830b7145032e69d33710e35f609f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-07T17:44:13

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2008-06-07 zzz
+    * NetDb: Tweak some logging on lease problems
+    * Shitlist:
+      - Add shitlistForever() and isShitlistedForever(), unused for now
+      - Sort the HTML output by router hash
+    * config.jsp: Add another warning
+    * netdb.jsp:
+      - Sort the lease HTML output by dest hash, local first
+      - Sort the router HTML output by router hash
+
 2008-06-06 zzz
     * LeaseSet:
       - Sort the leases by expiration date in TunnelPool.locked_buildNewLeaseSet()
