* Write announcement and prepare for release
Monotone-Parent: 313ea67e033f3848eb829a1ed6ecc3ad50cc0496
Monotone-Revision: b04fa6749bc96659eb8179591cfb733b05eca926

Monotone-Author: complication@mail.i2p
Monotone-Date: 2008-06-07T20:34:07
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.6.2

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2008-06-07  0.6.2 released
+
+2008-06-07 Complication
+    * Write announcement and prepare for release
+
 2008-05-29 zzz
     * Transport:
       - NTCP and UDP: Don't bid to connect to private IP addresses, mark unreachable
