2008-06-09 zzz     * Reachability: Restrict peers with no SSU address at all from inbound tunnels     * News:       - Add display of last updated and last checked time         on index.jsp and configupdate.jsp       - Add a function to get update version (unused for now)     * config.jsp: Add another warning
Monotone-Parent: d35eb70e00a9830b7145032e69d33710e35f609f
Monotone-Revision: 8b23a248995e5c57ccef1c2620a47929f4b257cf

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-09T13:14:52

--- a/history.txt
+++ b/history.txt
@@ -1,9 +1,16 @@
+2008-06-09 zzz
+    * Reachability: Restrict peers with no SSU address at all from inbound tunnels
+    * News:
+      - Add display of last updated and last checked time
+        on index.jsp and configupdate.jsp
+      - Add a function to get update version (unused for now)
+    * config.jsp: Add another warning
+
 2008-06-07 zzz
     * NetDb: Tweak some logging on lease problems
     * Shitlist:
       - Add shitlistForever() and isShitlistedForever(), unused for now
       - Sort the HTML output by router hash
-    * config.jsp: Add another warning
     * netdb.jsp:
       - Sort the lease HTML output by dest hash, local first
       - Sort the router HTML output by router hash
