* Floodfill: Add new FloodfillMonitorJob, which tracks active       floodfills, and automatically enables/disables floodfill on       Class O routers to maintain 5-7 total active floodfills
Monotone-Parent: 64f16b83bdacb210a00e5bdf5286b02da8dce481
Monotone-Revision: b8c4a0ba4a5a91422cce5ba398dbe037c58626a7

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-10T13:37:27
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,15 @@
+2008-06-10 zzz
+    * Floodfill: Add new FloodfillMonitorJob, which tracks active
+      floodfills, and automatically enables/disables floodfill on
+      Class O routers to maintain 5-7 total active floodfills
+    * NetDb Stats:
+      - Remove several more stats
+      - Don't publish bw stats in first hour of uptime
+      - Publish floodfill stats even if other stats are disabled
+      - Changes not effective until 0.6.2.1 to provide cover.
+    * graphs.jsp: Fix a bug where it tries to display the combined
+      bandwidth graph when it isn't available
+
 2008-06-09 zzz
     * Propagate i2.i2p.i2p-0.6.2.1-pre branch to i2p.i2p
 
