* Throttle: Use BANDWIDTH rather than CRIT as the rejection reason at       startup, so peers don't list us as failing.
Monotone-Parent: b8c4a0ba4a5a91422cce5ba398dbe037c58626a7
Monotone-Revision: 6986c6f156d452b33dd03248adbf940d4e367980

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-10T14:05:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -7,6 +7,8 @@
       - Don't publish bw stats in first hour of uptime
       - Publish floodfill stats even if other stats are disabled
       - Changes not effective until 0.6.2.1 to provide cover.
+    * Throttle: Use BANDWIDTH rather than CRIT as the rejection reason at
+      startup, so peers don't list us as failing.
     * graphs.jsp: Fix a bug where it tries to display the combined
       bandwidth graph when it isn't available
 
