* configclients.jsp: New. For both clients and webapps.       Saves are not yet implemented.
Monotone-Parent: 0362dc26550faf2b897fef14ca94059cc3f096e2
Monotone-Revision: bf5f6a458942bfa2b54ad76f92613a1f16a67eb0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-16T12:31:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,18 @@
+2008-06-16 zzz
+    * UDP: Prevent 100% CPU when UDP bind fails;
+      change bind fail message from ERROR to CRIT
+    * Refactor LoadClientAppsJob.java, move some functions to new
+      ClientAppConfig.java, to make them easily available to
+      new configclients.jsp
+    * RouterConsoleRunner: Use a new config file, webapps.config,
+      to control which .wars in webapps/ get run. Apps are enabled
+      by default; disable by (e.g.) webapps.syndie.startOnLoad=false
+      Config file is written if it does not exist.
+      Implement methods for use by new configclients.jsp.
+    * configclients.jsp: New. For both clients and webapps.
+      Saves are not yet implemented.
+
+
 2008-06-10 zzz
     * Floodfill: Add new FloodfillMonitorJob, which tracks active
       floodfills, and automatically enables/disables floodfill on
