--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2008-06-23 zzz
+    * configclients.jsp: Add start button for clients and webapps.
+    * PRNG: Add two stats
+    * Summary bar:
+      - Display Warning for TCP private IP address
+      - Display PRNG stats
+    * OutNetMessage: Change cache logging from WARN to INFO
+
 2008-06-17 zzz
     * Comm System: Add new STATUS_HOSED for use when UDP bind fails
     * Summary bar: Display helpful errror message when UDP bind fails
