* NTCP:       - Try to fix 100% CPU, caused perhaps by JVM NIO bug...       - Fix failsafe stats
Monotone-Parent: 86b5772eb03d829da223bb1548f2998696c4bf7a
Monotone-Revision: fc91c28b62d428be03fff7ead54c6ee958ba3389

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-06-30T03:14:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2008-06-30 zzz
+    * configstats.jsp: Fix NPE when no stats checked (thanks nothome27!)
+    * i2psnark:
+      - Fix NPE caused by race (thanks echelon!)
+      - Add mastertracker, remove de-ebook
+    * NTCP:
+      - Try to fix 100% CPU, caused perhaps by JVM NIO bug...
+      - Fix failsafe stats
+    * PersistentDataStore: More leaseSet code cleanup
+    * SimpleTimer: Change congestion message from error to warn
+
 2008-06-24 zzz
     * FloodfillMonitorJob: Change range from 5-7 to 4-6
     * NTCP: Remove getIsInbound(), duplicate of isInbound()
