* Blocklists:       - New, disabled by default, except for blocking of         forever-shitlisted peers. See source for instructions         and file format.     * Transport - Reject peers from inbound connections:       - Check IP against blocklist       - Check router hash against forever-shitlist, then block IP
Monotone-Parent: 8ac6155c57dd5b4fb228ceb08fa7fc6c6599d398
Monotone-Revision: feace88bf2fca6dcfbaa35ed0e0d61cf8d4d2946

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-07-30T03:59:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2008-07-30 zzz
+    * Blocklists:
+      - New, disabled by default, except for blocking of
+        forever-shitlisted peers. See source for instructions
+        and file format.
+    * Transport - Reject peers from inbound connections:
+      - Check IP against blocklist
+      - Check router hash against forever-shitlist, then block IP
+
 2008-07-16 zzz
     * configpeer.jsp: New
     * i2psnark: Open completed files read-only the first time
