* Floodfill Peer Selector:       - Avoid peers whose netdb is old, or have a recent failed store,         or are forever-shitlisted
Monotone-Parent: feace88bf2fca6dcfbaa35ed0e0d61cf8d4d2946
Monotone-Revision: 76586d6393879c8aec7836441efff7ab980a989c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-08-04T19:31:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2008-08-04 zzz
+    * Floodfill Peer Selector:
+      - Avoid peers whose netdb is old, or have a recent failed store,
+        or are forever-shitlisted
+
 2008-07-30 zzz
     * Blocklists:
       - New, disabled by default, except for blocking of
