--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2008-08-20 zzz
+    * Blocklists: Handle blank lines and \r\n in blocklist.txt
+    * NTCP: Add connection limit, set by i2np.ntcp.maxConnections,
+      default is 500 (very high for now)
+
 2008-08-13 zzz
     * i2psnark: Fix OOM vulnerability by checking incoming message length
       (thanks devzero!)
