* Persistent data store: Increase write limit from 300 to 600       so floodfill routers don't get backed up
Monotone-Parent: 4daf46e1171c73ee8981e74353702d8f11f6dade
Monotone-Revision: 47cb61cce0d6dde0da0daaa5be39e82a5ed68ab4

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-08-20T15:02:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -2,6 +2,8 @@
     * Blocklists: Handle blank lines and \r\n in blocklist.txt
     * NTCP: Add connection limit, set by i2np.ntcp.maxConnections,
       default is 500 (very high for now)
+    * Persistent data store: Increase write limit from 300 to 600
+      so floodfill routers don't get backed up
 
 2008-08-13 zzz
     * i2psnark: Fix OOM vulnerability by checking incoming message length
