* Update versions, package release
Monotone-Parent: 47cb61cce0d6dde0da0daaa5be39e82a5ed68ab4
Monotone-Revision: 5adc09f6795b582e46320fe635d0946e5eda4d74

Monotone-Author: complication@mail.i2p
Monotone-Date: 2008-08-24T10:28:57
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.6.3

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2008-08-24  0.6.3 released
+
+2008-08-24 Complication
+    * Update versions, package release
+
 2008-08-20 zzz
     * Blocklists: Handle blank lines and \r\n in blocklist.txt
     * NTCP: Add connection limit, set by i2np.ntcp.maxConnections,
