* Floodfill Peer Selector: Prefer already-connected floodfill       peer for direct RouterInfo stores, to mimimize floodfill       connections     * Peer Profiles: Classify connected peers as "active",       which will help improve the fast pool     * Transport Manager: Add isEstablished(Hash)
Monotone-Parent: 5b3c1070dddb4409b8aaa243e14ca654ce16fb7f
Monotone-Revision: 2807a1839713d41271039a74e5ee0dfabc4dfdbb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-08-27T19:58:13
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2008-08-27 zzz
+    * Floodfill Peer Selector: Prefer already-connected floodfill
+      peer for direct RouterInfo stores, to mimimize floodfill
+      connections
+    * Peer Profiles: Classify connected peers as "active",
+      which will help improve the fast pool
+    * Transport Manager: Add isEstablished(Hash)
+    * NTCP: Reduce max idle time from 20m to 15m
+    * NetDb stats: Post-0.6.3 clean up
+
 * 2008-08-24  0.6.3 released
 
 2008-08-24 Complication
