* Profiles: Penalize capacity when tunnel build request times out     * Tunnel BuildExecutor: Debug cleanup
Monotone-Parent: 7c0ec219c1efa83255f432909b91298eeac41f1d
Monotone-Revision: 5e2a96c5c3b86e700de1ef4364396dbc62f87d06

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-08-29T13:15:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2008-08-29 zzz
+    * Tunnel BuildExecutor: Debug cleanup
+    * Profiles: Penalize capacity when tunnel build request times out
+    * Shutdown: Call the shutdown hooks before the router shutdown
+      rather than after
+    * Stats: Remove tunnel.Bps.* stats when the tunnel pool is closed
+
 2008-08-27 zzz
     * Floodfill Peer Selector: Prefer already-connected floodfill
       peer for direct RouterInfo stores, to mimimize floodfill
